--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,9 @@
 
 
 main{
+ 
     min-height: calc(100vh - 300px);
+    background:rgba(224, 224, 224, 0.185);
 }
 
 
@@ -105,16 +107,21 @@ header div .imgD{
 
 /* ---------------------iframe---------------- */
 .iframe{
-    width:20%;
+    width:100%;
     height: 600px;
-    border:none;
-    display: block;
     
+    
+    border-left:2px solid rgba(174, 174, 175, 0.699);
 }
 
 article{
-    display:flex;
-    justify-content:flex-end;
+    
+    left:80%;
+    position: relative;
+    width:20%;
+    
+    
+
 }
 
 
@@ -128,23 +135,37 @@ footer{
  text-align: center;
  color: black;
  
+ 
 }
 
 footer .by{
+    
     top:3%;
     border:2px solid green;
 }
 
+
+
+
+
+/* dentro del main */
 .conte{
-    position:absolute;
+       
     top: 180px;
-    left:40px;
+    margin:20px 30px 20px 20px ;
+    position:absolute;
+    padding:30px;
     display:flex;
     justify-content:space-between;
     visibility: hidden;
     flex-wrap: wrap;
     width:78%;
 
+}
+
+.conte div h3{
+    border-bottom:1px solid var(--colorMenu);
+    margin-bottom:5px;
 }
 
 .conteDos {
@@ -167,6 +188,7 @@ footer .by{
     visibility: hidden;
     flex-wrap: wrap;
     width:78%;
+    padding:25px;
 }
 
 .conte div {
@@ -176,15 +198,43 @@ footer .by{
 
 .conteCuatro div {
     width: 30%;
-    margin-top: 10px;
+    margin-top:-20px;
+    margin-bottom: 20px;
    
 }
 
-.imagen {
-    width:200%;
-    height:130%;
-    margin-left: 10%;
-    margin-top:10px;
+.conteCuatro div h3{
+    border-bottom:1px solid var(--colorMenu);
+    margin-bottom:5px;
+    
+}
+
+.conimagenpy{
+    width:100%;
+}
+
+.imagenpy {
+    width:100vh;
+
+    height:290px;
+    position:absolute;
+    border-radius:10px;
+    margin-left: 15%;
+    margin-top:4%;
+    margin-bottom:10px;
+}
+
+
+
+
+
+.imgp img{
+    margin-left:1%;
+    margin-top:-23%;
+    width: 100%;
+    border-radius:20%;
+    border-bottom:2px solid rgba(80, 142, 179, 0.336);
+    border-top:2px solid rgba(80, 142, 179, 0.336);
 }
 
 
@@ -192,19 +242,41 @@ footer .by{
 
 
 
+/* -----------------PAGINA DE FRAME.HTML-------------------- */
+.loguito{
+    width:150px;
+    border-radius:25%;
+    
+    border-bottom:3px solid var(--colorMenu);
+    margin:20px 0 0 20%;
+}
 
+.span{
+    margin-left:13%;
+}
 
+.perso{
+    margin:10px 0 0 0;
+}
 
+.infoPersonal{
+    background: var(--colorMenu);
+    text-align:center;
+    font-size:20px;
+}
 
+.sub{
+    font-size:20px;
+    font-weight: bold;
+    margin:11px 0 2px 0 ;
+}
 
-
-
-
-
-
-
-
-
+.st{
+    padding: 6px;
+}
+.st p{
+    font-size:20px;
+}
 
 
 
